{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 106,
  "lineage": "45b6c99c-cfed-2b7e-be78-9b879e93bae3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "hgts_shared_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0902888e29f110be2",
            "arn": "arn:aws:ec2:ap-south-2:739275440360:elastic-ip/eipalloc-0902888e29f110be2",
            "association_id": "eipassoc-080f43cd5d3369199",
            "domain": "vpc",
            "id": "eipalloc-0902888e29f110be2",
            "network_border_group": "ap-south-2",
            "network_interface": "eni-0461a46962d8a38cb",
            "private_dns": "ip-10-0-1-5.ap-south-2.compute.internal",
            "private_ip": "10.0.1.5",
            "public_dns": "ec2-40-192-22-106.ap-south-2.compute.amazonaws.com",
            "public_ip": "40.192.22.106",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hgts_shared_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:739275440360:internet-gateway/igw-01a1e6dba37138789",
            "id": "igw-01a1e6dba37138789",
            "owner_id": "739275440360",
            "tags": {
              "Created_By": "Terraform",
              "Name": "hgts_shared_igw"
            },
            "tags_all": {
              "Created_By": "Terraform",
              "Name": "hgts_shared_igw"
            },
            "vpc_id": "vpc-0933ebef8443809cd"
          },
          "dependencies": [
            "aws_vpc.hgts_shared_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "hgts_shared_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0902888e29f110be2",
            "association_id": "eipassoc-080f43cd5d3369199",
            "connectivity_type": "public",
            "id": "nat-0af570f7c80671ecf",
            "network_interface_id": "eni-0461a46962d8a38cb",
            "private_ip": "10.0.1.5",
            "public_ip": "40.192.22.106",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06d752f47974dd9e8",
            "tags": {
              "Createdby": "Terraform",
              "Name": "Nat Gateway"
            },
            "tags_all": {
              "Createdby": "Terraform",
              "Name": "Nat Gateway"
            }
          },
          "dependencies": [
            "aws_eip.hgts_shared_eip",
            "aws_subnet.hgts_shared_public_subnet1",
            "aws_vpc.hgts_shared_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "hgts_shared_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:739275440360:network-acl/acl-077bdbba92cdf90fe",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-077bdbba92cdf90fe",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "739275440360",
            "subnet_ids": [
              "subnet-035121ddf6a619509",
              "subnet-06719fa18cbe5d1b2",
              "subnet-06d752f47974dd9e8",
              "subnet-0a591c39af6c477fd"
            ],
            "tags": {
              "Name": "hgts_shared_nsg",
              "createdby": "Terraform"
            },
            "tags_all": {
              "Name": "hgts_shared_nsg",
              "createdby": "Terraform"
            },
            "vpc_id": "vpc-0933ebef8443809cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.hgts_shared_private_subnet1",
            "aws_subnet.hgts_shared_private_subnet2",
            "aws_subnet.hgts_shared_public_subnet1",
            "aws_subnet.hgts_shared_public_subnet2",
            "aws_vpc.hgts_shared_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "hgts_shared_rtb_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01a1e6dba37138789",
            "id": "r-rtb-0e4640a038b6d7a251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e4640a038b6d7a25",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hgts_shared_igw",
            "aws_route_table.hgts_shared_rtb_public",
            "aws_vpc.hgts_shared_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "hgts_shared_rtb_private_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0facb5c897982df951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0af570f7c80671ecf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0facb5c897982df95",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.hgts_shared_eip",
            "aws_nat_gateway.hgts_shared_gw",
            "aws_route_table.hgts_shared_rtb_private",
            "aws_subnet.hgts_shared_public_subnet1",
            "aws_vpc.hgts_shared_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hgts_shared_rtb_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:739275440360:route-table/rtb-0facb5c897982df95",
            "id": "rtb-0facb5c897982df95",
            "owner_id": "739275440360",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0af570f7c80671ecf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Created_By": "Teerraform",
              "Name": "hgts_shared_rtb_private"
            },
            "tags_all": {
              "Created_By": "Teerraform",
              "Name": "hgts_shared_rtb_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0933ebef8443809cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hgts_shared_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hgts_shared_rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:739275440360:route-table/rtb-0e4640a038b6d7a25",
            "id": "rtb-0e4640a038b6d7a25",
            "owner_id": "739275440360",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a1e6dba37138789",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Created_By": "Teerraform",
              "Name": "hgts_shared_rtb_public"
            },
            "tags_all": {
              "Created_By": "Teerraform",
              "Name": "hgts_shared_rtb_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0933ebef8443809cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hgts_shared_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hgts_shared_subnet_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7eb8fe5a8ebd49f",
            "route_table_id": "rtb-0e4640a038b6d7a25",
            "subnet_id": "subnet-06d752f47974dd9e8"
          },
          "dependencies": [
            "aws_route_table.hgts_shared_rtb_public",
            "aws_subnet.hgts_shared_public_subnet1",
            "aws_vpc.hgts_shared_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hgts_shared_subnet_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041b505117a83b951",
            "route_table_id": "rtb-0e4640a038b6d7a25",
            "subnet_id": "subnet-035121ddf6a619509"
          },
          "dependencies": [
            "aws_route_table.hgts_shared_rtb_public",
            "aws_subnet.hgts_shared_public_subnet2",
            "aws_vpc.hgts_shared_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hgts_shared_subnet_association3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d66b896fb87b469f",
            "route_table_id": "rtb-0facb5c897982df95",
            "subnet_id": "subnet-0a591c39af6c477fd"
          },
          "dependencies": [
            "aws_route_table.hgts_shared_rtb_private",
            "aws_subnet.hgts_shared_private_subnet1",
            "aws_vpc.hgts_shared_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hgts_shared_subnet_association4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0463afcff54753b07",
            "route_table_id": "rtb-0facb5c897982df95",
            "subnet_id": "subnet-06719fa18cbe5d1b2"
          },
          "dependencies": [
            "aws_route_table.hgts_shared_rtb_private",
            "aws_subnet.hgts_shared_private_subnet2",
            "aws_vpc.hgts_shared_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hgts_shared_linux_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:739275440360:security-group/sg-0ac5b84a88a2c0ee8",
            "description": "To Allow SSH From IPV4 Devices",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac5b84a88a2c0ee8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hgts_shared_linux_sg",
            "name_prefix": "",
            "owner_id": "739275440360",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "hgts_shared allow SSH",
              "Name": "hgts_shared_sg_linux",
              "createdby": "terraform"
            },
            "tags_all": {
              "Description": "hgts_shared allow SSH",
              "Name": "hgts_shared_sg_linux",
              "createdby": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0933ebef8443809cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hgts_shared_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hgts_shared_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:739275440360:security-group/sg-0646b6efcae79d037",
            "description": "To Allow SSH From IPV4 Devices",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0646b6efcae79d037",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hgts_shared_web_sg",
            "name_prefix": "",
            "owner_id": "739275440360",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "hgts_shared allow SSH - RDP - HTTP and Jenkins",
              "Name": "hgts_shared_sg",
              "createdby": "terraform"
            },
            "tags_all": {
              "Description": "hgts_shared allow SSH - RDP - HTTP and Jenkins",
              "Name": "hgts_shared_sg",
              "createdby": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0933ebef8443809cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hgts_shared_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hgts_shared_windows_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:739275440360:security-group/sg-0c3ed87eb6b26b75e",
            "description": "To Allow RDP From IPV4 Devices",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3ed87eb6b26b75e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "hgts_shared_windows_sg",
            "name_prefix": "",
            "owner_id": "739275440360",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "hgts_shared allow RDP",
              "Name": "sg_hgts_shared_windows",
              "createdby": "terraform"
            },
            "tags_all": {
              "Description": "hgts_shared allow RDP",
              "Name": "sg_hgts_shared_windows",
              "createdby": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0933ebef8443809cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hgts_shared_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hgts_shared_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:739275440360:subnet/subnet-0a591c39af6c477fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a591c39af6c477fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739275440360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hgts_shared_private_subnet1",
              "created_by": "Terraform"
            },
            "tags_all": {
              "Name": "hgts_shared_private_subnet1",
              "created_by": "Terraform"
            },
            "vpc_id": "vpc-0933ebef8443809cd"
          },
          "dependencies": [
            "aws_vpc.hgts_shared_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hgts_shared_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:739275440360:subnet/subnet-06719fa18cbe5d1b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06719fa18cbe5d1b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739275440360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hgts_shared_private_subnet2",
              "created_by": "Terraform"
            },
            "tags_all": {
              "Name": "hgts_shared_private_subnet2",
              "created_by": "Terraform"
            },
            "vpc_id": "vpc-0933ebef8443809cd"
          },
          "dependencies": [
            "aws_vpc.hgts_shared_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hgts_shared_public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:739275440360:subnet/subnet-06d752f47974dd9e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.1.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d752f47974dd9e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "739275440360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hgts_shared_public_subnet",
              "created_by": "Terraform"
            },
            "tags_all": {
              "Name": "hgts_shared_public_subnet",
              "created_by": "Terraform"
            },
            "vpc_id": "vpc-0933ebef8443809cd"
          },
          "dependencies": [
            "aws_vpc.hgts_shared_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hgts_shared_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:739275440360:subnet/subnet-035121ddf6a619509",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.2.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035121ddf6a619509",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "739275440360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hgts_shared_public_subnet",
              "created_by": "Terraform"
            },
            "tags_all": {
              "Name": "hgts_shared_public_subnet",
              "created_by": "Terraform"
            },
            "vpc_id": "vpc-0933ebef8443809cd"
          },
          "dependencies": [
            "aws_vpc.hgts_shared_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hgts_shared_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:739275440360:vpc/vpc-0933ebef8443809cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f083f001b6010ebd",
            "default_route_table_id": "rtb-028ac8ce5a53dfcb0",
            "default_security_group_id": "sg-050377d3f6be5c72e",
            "dhcp_options_id": "dopt-0e1324a82db9a919e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0933ebef8443809cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-028ac8ce5a53dfcb0",
            "owner_id": "739275440360",
            "tags": {
              "Created_By": "Terraform",
              "Name": "hgts_preprod"
            },
            "tags_all": {
              "Created_By": "Terraform",
              "Name": "hgts_preprod"
            }
          }
        }
      ]
    }
  ]
}